# reflectdetect

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile_apriltag  Dockerfile_converter  Dockerfile_geolocation  LICENSE  README.md  apriltag_area_measurement.ipynb  apriltag_primary.ipynb  apriltags_develop.ipynb  apriltags_family_test.ipynb  apriltags_height_bins.ipynb  apriltags_tryout.ipynb  detect_using_apriltag_example.ipynb  detect_using_geolocation_example.ipynb  dummy_detection.json  environment.yml  intensities_plot_for_paper.ipynb  is_panel_in_orthophoto_test.ipynb  panel_properties_apriltag_example.json  pyproject.toml  pytest.ini  reflectance_panel_example_data.json  requirements.txt  setupExifTool.vbs  spectra_plot_for_paper.ipynb  study_appropriate_apriltag_families.ipynb  study_appropriate_apriltag_sizes.ipynb  workflow1.md  workflow2.md
.github/workflows/: publish.yml  python-application.yml  python-tests.yml
data/: .gitignore  20250326_analysis_reflectdetect.R  apriltag_example.tif  example_apriltag_image.tif  example_apriltag_image_2.tif  examplespectra_reflectdetect.csv
data/apriltag_run_3/: panel_properties.json
data/apriltags_test/: .gitignore  IMG_0196_2.tif  IMG_0228_1.tif  higher.tif  highest.tif
data/apriltags_test/highest_cross_ref/: IMG_0259_1.tif  IMG_0259_2.tif  IMG_0259_3.tif  IMG_0259_5.tif
data/example/: combined_image.tif  panel_data.json
data/example/YOLO_OBB_Dataset/Images/seq1/metadata/: seq1_00040_00_extraction.json  seq1_00040_01_extraction.json  seq1_00040_02_extraction.json  seq1_00040_03_extraction.json  seq1_00040_04_extraction.json
data/example/YOLO_OBB_Dataset/annotations/: seq1.csv
docs/: conf.py  index.rst
docs/docs/: 20250310_sample_data.gpkg  20250312_analysis_reflectdetect.R  modules.rst  reflectdetect.rst  reflectdetect.utils.rst
metrics/: metrics_20240512_140947.json  metrics_20240522_112416_github.json  metrics_20240522_140417.json
reflectdetect/: PanelProperties.py  __init__.py  apriltag_main.py  constants.py  converter_main.py  geolocation_main.py  pipeline.py  raw_to_radiance.py
reflectdetect/manufacturer/generic/: generic_utils.py
reflectdetect/manufacturer/micasense/: micasense_metadata.py  micasense_utils.py
reflectdetect/utils/: apriltags.py  debug.py  exif.py  iterators.py  orthophoto.py  panel.py  paths.py  polygons.py  thread.py  thread_silence_all.py
reflectdetect/utils/tests/: test_apriltags.py  test_exif.py  test_iterators.py  test_orthophoto.py
scripts/: generate_coverage_badge.py
src/: apriltag_main.py  apriltags_debug_utils.py  apriltags_main.py  apriltags_utils.py  geolocation_main.py  main.py  orthophoto_develop.ipynb  orthophoto_utils.py  pipeline.py  test_main.py
src/detector/: BaseBatchDetector.py  BaseDetector.py
src/detector/dummy/: DummyDetector.py  dummy_detection.json  test_dummy.py
src/detector/naive/: ExifExtractor.py  NaiveDetector.py  Pipeline_creation.ipynb  Pipeline_detector.ipynb  bounding_boxes.json  test_NaiveDetector.py
src/extractor/: BaseBatchExtractor.py  BaseExtractor.py
src/extractor/dummy/: DummyExtractor.py  dummy_extractions.json
src/extractor/naive/: Extractor.py  test_naive_extractor.py
src/extractor/naive_batch/: BatchExtractor.py  test_naive_batch_extractor.py  test_naive_extractor.py
src/extractor/shared/: shared.py
src/transformer/: BaseBatchTransformer.py  BaseTransformer.py
src/transformer/dummy/: DummyTransformer.py
src/transformer/naive/: Transformer.py  test_naive_transformer.py
src/transformer/naive_batch/: BatchTransformer.py  test_naive_batch_transformer.py  test_naive_transformer.py
src/utils/: apriltags.py  debug.py  exif.py  iterators.py  orthophoto.py  panel.py  panel_utils.py  paths.py  polygons.py  pose_plot.py
