[tool.poetry]
name = "reflectdetect"
version = "v0.1.4"
description = "An automated workflow for in-flight radiometric calibration of UAV imagery"
authors = ["Luca Francis <lucajoshua.francis@stud.uni-goettingen.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/reflectdetect/reflectdetect"

[tool.poetry.scripts]
reflectdetect-apriltag = "reflectdetect.apriltag_main:main"
reflectdetect-geolocation = "reflectdetect.geolocation_main:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
rasterio = "^1.3.10"
typed-argument-parser = "^1.10.1"
opencv-python = "^4.10.0.84"
shapely = "^2.0.6"
pyexiftool = "^0.5.6"
robotpy-apriltag = "^2024.3.2.1"
fiona = "^1.9.6"
geopandas = "^1.0.1"
matplotlib = "^3.9.2"
pydantic = "^2.8.2"
tifffile = "^2024.8.28"
tqdm = "^4.66.5"
rich = "^13.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["reflectdetect/"]
python_version="3.10"
strict = true
warn_unreachable = true
pretty = true
ignore_missing_imports=true